feat(theme): split HTML into header.php and footer.php for WordPress templating

--- a/web/app/themes/topiclisting/templates/index.html
+++ b/web/app/themes/topiclisting/templates/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -7,7 +8,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Topic Listing Bootstrap 5 Template</title>
+        <title>oTopic Listing Bootstrap 5 Template o</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -126,7 +127,7 @@ https://templatemo.com/tm-590-topic-listing
                                 <a href="topics-detail.html">
                                     <div class="d-flex">
                                         <div>
-                                            <h5 class="mb-2">Web Design</h5>
+                                            <h5 class="mb-2">okWeb Design</h5>
 
                                             <p class="mb-0">When you search for free CSS templates, you will notice that TemplateMo is one of the best websites.</p>
                                         </div>
